@@ -1480,7 +1480,13 @@ if [ ${clm_md} = 'hfc' ] || [ ${clm_md} = 'hfs' ]; then
 	# User requested high-frequency mode and did not specify tpd so (try to) infer it
 	# Examine bounds of second timestep in case first timestep is instantaneous (e.g., restart values)
 	tm_var='time'
+	# 20240407 This step appears to cause failure experienced by Tony B. in https://acmeclimate.slack.com/archives/C02LCQ38YV8/p1712345304709289?thread_ts=1711642857.535499&cid=C02LCQ38YV8
+	# Hypothesis is that tm_bnds evaluates to empty string, then use of empty tm_bnds in following ncks command causes "-d" to be interpreted as variable name and  "time,0" to be interpreted as filename
 	tm_bnds=`ncks --trd -M -m -v ${tm_var} ${ppn_opt} ${fl_in[0]} | grep -E -i "^${tm_var} attribute [0-9]+: bounds" | cut -f 11- -d ' ' | sed 's/^ *//g'`
+	if [ -z "${tm_bnds}" ]; then
+	    printf "${spt_nm}: ERROR High-frequency mode needs but failed find bounds variable for record coordinate named \"${time}\". CF requires bounds variable to be specified as value of \"bounds\" attribute of coordinate. Typically record bounds variable is named \"time_bnds\" or \"time_bounds\".\nHINT: A workaround to this is to explicitly specify the number of timesteps-per-day in every input file with the --tpd option.\n"
+	    exit 1
+	fi # !tm_bnds
 	# 20201220: Using %g not %f in format results in tpd=10 not tpd=8 for 3-hourly EAM data!
 	# 20210815: Prefer to hyperslab second time index since some files contain an "instantaneous" (i.e., zero-duration) first timestep.
 	# However this presumes file has multiple timesteps---fails with monthly data
@@ -1554,7 +1560,6 @@ if [ "${tms_flg}" = 'Yes' ]; then
 		exit 1
 	    fi # !dpf_ntg
 	fi # !dpf
-	echo "begin funky math"
 	# 20220818
 	let fpy=${dpy}/${dpf}
 	#fpy=$(echo "${dpy}/${dpf}" | bc -l) # NB: dpy/dpf more accurate than fpy
